force-app/main/default/objects/bpats__ASM_Resume_Mapping__mdt/bpats__ASM_Resume_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ASM Resume Mapping</label>
    <pluralLabel>ASM Resume Mappings</pluralLabel>
</CustomObject>