force-app/main/default/objects/bpats__ASM_Resume_Mapping__mdt/fields/bpats__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>