force-app/main/default/objects/bpats__ASM_Resume_Mapping__mdt/fields/bpats__Mapped_Field__c.field-meta.xml
<CustomField>
    <fullName>bpats__Mapped_Field__c</fullName>
    <label>Mapped Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>