force-app/main/default/objects/bpats__ASM_Resume_Mapping__mdt/fields/bpats__Record_Type_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Record_Type_Api_Name__c</fullName>
    <label>Record Type Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>