force-app/main/default/objects/bpats__ASM_Resume_Mapping__mdt/fields/bpats__Section__c.field-meta.xml
<CustomField>
    <fullName>bpats__Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Details</fullName>
                <default>true</default>
                <label>Contact Details</label>
            </value>
            <value>
                <fullName>Employment History</fullName>
            </value>
            <value>
                <fullName>Competency</fullName>
            </value>
            <value>
                <fullName>Education History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>